// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ExpenseList with empty message 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="page-expense__header"
>
          <div>
                    Expense
          </div>
          <div>
                    Amount
          </div>
</div>,
        <div
          className="page-expense_body"
>
          <div
                    className="page-expense__item  page-expense__item--message"
          >
                    <span>
                              No Expenses
                    </span>
          </div>
</div>,
      ],
      "className": "content-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              Expense
</div>,
            <div>
              Amount
</div>,
          ],
          "className": "page-expense__header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Expense",
            },
            "ref": null,
            "rendered": "Expense",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Amount",
            },
            "ref": null,
            "rendered": "Amount",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="page-expense__item  page-expense__item--message"
>
            <span>
                        No Expenses
            </span>
</div>,
          "className": "page-expense_body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              No Expenses
</span>,
            "className": "page-expense__item  page-expense__item--message",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No Expenses",
            },
            "ref": null,
            "rendered": "No Expenses",
            "type": "span",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="page-expense__header"
>
            <div>
                        Expense
            </div>
            <div>
                        Amount
            </div>
</div>,
          <div
            className="page-expense_body"
>
            <div
                        className="page-expense__item  page-expense__item--message"
            >
                        <span>
                                    No Expenses
                        </span>
            </div>
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                Expense
</div>,
              <div>
                Amount
</div>,
            ],
            "className": "page-expense__header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Expense",
              },
              "ref": null,
              "rendered": "Expense",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Amount",
              },
              "ref": null,
              "rendered": "Amount",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="page-expense__item  page-expense__item--message"
>
              <span>
                            No Expenses
              </span>
</div>,
            "className": "page-expense_body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span>
                No Expenses
</span>,
              "className": "page-expense__item  page-expense__item--message",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No Expenses",
              },
              "ref": null,
              "rendered": "No Expenses",
              "type": "span",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`render ExpenseList with expenses test 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={
        Array [
            Object {
              "amount": 195,
              "createdAt": 0,
              "description": "Gum",
              "id": "1",
              "note": "",
            },
            Object {
              "amount": 109500,
              "createdAt": -345600000,
              "description": "Rent",
              "id": "2",
              "note": "",
            },
            Object {
              "amount": 4500,
              "createdAt": 345600000,
              "description": "Credit Card",
              "id": "3",
              "note": "",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="page-expense__header"
>
          <div>
                    Expense
          </div>
          <div>
                    Amount
          </div>
</div>,
        <div
          className="page-expense_body"
>
          <ExpenseListItem
                    amount={195}
                    createdAt={0}
                    description="Gum"
                    id="1"
                    note=""
          />
          <ExpenseListItem
                    amount={109500}
                    createdAt={-345600000}
                    description="Rent"
                    id="2"
                    note=""
          />
          <ExpenseListItem
                    amount={4500}
                    createdAt={345600000}
                    description="Credit Card"
                    id="3"
                    note=""
          />
</div>,
      ],
      "className": "content-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              Expense
</div>,
            <div>
              Amount
</div>,
          ],
          "className": "page-expense__header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Expense",
            },
            "ref": null,
            "rendered": "Expense",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Amount",
            },
            "ref": null,
            "rendered": "Amount",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExpenseListItem
              amount={195}
              createdAt={0}
              description="Gum"
              id="1"
              note=""
/>,
            <ExpenseListItem
              amount={109500}
              createdAt={-345600000}
              description="Rent"
              id="2"
              note=""
/>,
            <ExpenseListItem
              amount={4500}
              createdAt={345600000}
              description="Credit Card"
              id="3"
              note=""
/>,
          ],
          "className": "page-expense_body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "amount": 195,
              "createdAt": 0,
              "description": "Gum",
              "id": "1",
              "note": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "amount": 109500,
              "createdAt": -345600000,
              "description": "Rent",
              "id": "2",
              "note": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "function",
            "props": Object {
              "amount": 4500,
              "createdAt": 345600000,
              "description": "Credit Card",
              "id": "3",
              "note": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="page-expense__header"
>
            <div>
                        Expense
            </div>
            <div>
                        Amount
            </div>
</div>,
          <div
            className="page-expense_body"
>
            <ExpenseListItem
                        amount={195}
                        createdAt={0}
                        description="Gum"
                        id="1"
                        note=""
            />
            <ExpenseListItem
                        amount={109500}
                        createdAt={-345600000}
                        description="Rent"
                        id="2"
                        note=""
            />
            <ExpenseListItem
                        amount={4500}
                        createdAt={345600000}
                        description="Credit Card"
                        id="3"
                        note=""
            />
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                Expense
</div>,
              <div>
                Amount
</div>,
            ],
            "className": "page-expense__header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Expense",
              },
              "ref": null,
              "rendered": "Expense",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Amount",
              },
              "ref": null,
              "rendered": "Amount",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExpenseListItem
                amount={195}
                createdAt={0}
                description="Gum"
                id="1"
                note=""
/>,
              <ExpenseListItem
                amount={109500}
                createdAt={-345600000}
                description="Rent"
                id="2"
                note=""
/>,
              <ExpenseListItem
                amount={4500}
                createdAt={345600000}
                description="Credit Card"
                id="3"
                note=""
/>,
            ],
            "className": "page-expense_body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "amount": 195,
                "createdAt": 0,
                "description": "Gum",
                "id": "1",
                "note": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "amount": 109500,
                "createdAt": -345600000,
                "description": "Rent",
                "id": "2",
                "note": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "function",
              "props": Object {
                "amount": 4500,
                "createdAt": 345600000,
                "description": "Credit Card",
                "id": "3",
                "note": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
